<?xml version="1.0" encoding="utf-8"?>
<!-- https://www.techrepublic.com/article/pro-tip-save-hours-of-frustration-with-this-android-tablelayout-solution/ -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cart_item_options" >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:layout_margin="5dp"
            android:contentDescription="TODO" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:orientation="vertical">
            <TextView
                android:id="@+id/cart_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_quantity"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:gravity="start"/>
            <TextView
                android:id="@+id/cart_item_unit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_subtotal"
                android:layout_margin="5dp"
                android:gravity="start"/>
        </LinearLayout>
        <TextView
            android:id="@+id/cart_item_subtotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:text="@string/unit_price"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:gravity="end"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cart_item_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit">
        </Button>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete_button"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
