<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/order_items" >
        <TextView
            android:id="@+id/order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/purchase_date"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_details"
        app:layout_constraintBottom_toTopOf="@id/order_options" />
    <LinearLayout
        android:id="@+id/order_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:text="@string/total_price" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:visibility="gone" >
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/order_archive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/archive">
            </Button>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/order_delete_button"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>