<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/item"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:contentDescription="TODO" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:orientation="vertical">
            <TextView
                android:id="@+id/store_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:gravity="start"/>
            <TextView
                android:id="@+id/store_item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_margin="5dp"
                android:gravity="start"/>
            <TextView
                android:id="@+id/store_item_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_margin="5dp"
                android:gravity="start"/>
            <TextView
                android:id="@+id/store_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_margin="5dp"
                android:gravity="end"/>
            <TextView
                android:id="@+id/store_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_margin="5dp"
                android:gravity="end"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
<!--<TableRow android:id="@+id/item"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/store_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:layout_weight="0.25"
        android:gravity="start"/>
    <TextView
        android:id="@+id/store_item_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_column="1"
        android:layout_margin="5dp"
        android:layout_weight="0.25"
        android:gravity="start"/>
    <TextView
        android:id="@+id/store_item_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_column="2"
        android:layout_margin="5dp"
        android:layout_weight="0.25"
        android:gravity="end"/>
    <TextView
        android:id="@+id/store_item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_column="3"
        android:layout_margin="5dp"
        android:layout_weight="0.25"
        android:gravity="end"/>
</TableRow>-->